--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<!-- saved from url=(0040)mac-server.html -->
+<!-- saved from url=(0040)linux-server.html -->
 <html prefix="og: http://ogp.me/ns#" class="no-touch" lang="en-US">
 <head itemscope itemtype="http://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Emby Server for Linux - Emby</title>
-    <meta name="description" content="Emby Server for Apple Mac OSX - Organize and stream your personal videos, music, photos and Live TV to any device.">
+    <meta name="description" content="Emby Server for Linux - Organize and stream your personal videos, music, photos and Live TV to any device.">
     {SOCIALNETWORKS}
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
@@ -691,7 +691,7 @@
 
     </div>
     <!-- /FOOTER -->
-    <a class="w-toplink" href="mac-server.html#"><i class="mdfi_hardware_keyboard_arrow_up"></i></a>
+    <a class="w-toplink" href="linux-server.html#"><i class="mdfi_hardware_keyboard_arrow_up"></i></a>
     <script type="text/javascript">
         if (window.$us === undefined) window.$us = {};
         $us.canvasOptions = ($us.canvasOptions || {});
