--- a/src/docker-server.html
+++ b/src/docker-server.html
@@ -420,21 +420,9 @@
                                             <strong>Install Emby Server</strong>
                                         </div>
                                         <p>
-                                            <code style="white-space:nowrap;">docker run -it --rm -v /usr/local/bin:/target emby/embyserver instl</code>
-                                            <br /><br />Or for for arm32v7 (Rpi 2/3):
-                                            <br /><code style="white-space:nowrap;">docker run -it --rm -v /usr/local/bin:/target emby/embyserver_arm32v7 instl</code>
+                                            Emby Docker instructions can be found on Docker Hub:
+                                            <br/><a href="https://hub.docker.com/r/emby/embyserver" target="_blank">https://hub.docker.com/r/emby/embyserver</a>
                                         </p>
-                                        <div>
-                                            <strong>Run Emby Server</strong>
-                                        </div>
-                                        <p>
-                                            <code>/usr/local/bin/emby-server</code>
-                                        </p>
-                                        <div>On first run answer any on-screen prompts.</div>
-                                        <div>
-                                            <strong>Run Setup Wizard</strong>
-                                        </div>
-                                        <p>Visit http://localhost:8096</p>
                                     </div>
                                 </div>
                             </div>
