update nas instructions

--- a/src/linux-server.html
+++ b/src/linux-server.html
@@ -266,7 +266,7 @@
         }
 
         .installPlatform {
-            margin: 1.25em 0 1em;
+            margin: 2em 0 1em;
         }
 
         .hide {
@@ -278,7 +278,8 @@
         }
 
         .instructionListHeader {
-            font-size: 120%;
+            font-size: 130%;
+            font-weight: 500;
         }
     </style>
     <script>
@@ -482,25 +483,25 @@
 
                                         <div class="installPlatform hide centos">
 
-                                            <div><b class="instructionListHeader">X64</b></div>
+                                            <div><b class="instructionListHeader">CentOS X64</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_x86_64.rpm">yum install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armv7hl</b></div>
+                                            <div><b class="instructionListHeader">CentOS Armv7hl</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_armv7hl.rpm">yum install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">X64 - BETA</b></div>
+                                            <div><b class="instructionListHeader">CentOS X64 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_x86_64.rpm">yum install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armv7hl - BETA</b></div>
+                                            <div><b class="instructionListHeader">CentOS Armv7hl - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_armv7hl.rpm">yum install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
@@ -509,25 +510,25 @@
 
                                         <div class="installPlatform hide fedora">
 
-                                            <div><b class="instructionListHeader">X64</b></div>
+                                            <div><b class="instructionListHeader">Fedora X64</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_x86_64.rpm">dnf install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armv7hl</b></div>
+                                            <div><b class="instructionListHeader">Fedora Armv7hl</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_armv7hl.rpm">dnf install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">X64 - BETA</b></div>
+                                            <div><b class="instructionListHeader">Fedora X64 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_x86_64.rpm">dnf install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armv7hl - BETA</b></div>
+                                            <div><b class="instructionListHeader">Fedora Armv7hl - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_armv7hl.rpm">dnf install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
@@ -536,25 +537,25 @@
 
                                         <div class="installPlatform hide opensuse">
 
-                                            <div><b class="instructionListHeader">X64</b></div>
+                                            <div><b class="instructionListHeader">OpenSUSE X64</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_x86_64.rpm">zypper install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armv7hl</b></div>
+                                            <div><b class="instructionListHeader">OpenSUSE Armv7hl</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_armv7hl.rpm">zypper install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">X64 - BETA</b></div>
+                                            <div><b class="instructionListHeader">OpenSUSE X64 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_x86_64.rpm">zypper install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armv7hl - BETA</b></div>
+                                            <div><b class="instructionListHeader">OpenSUSE Armv7hl - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_armv7hl.rpm">zypper install {url}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
@@ -564,28 +565,28 @@
 
                                         <div class="installPlatform ubuntu">
 
-                                            <div><b class="instructionListHeader">X64</b></div>
+                                            <div><b class="instructionListHeader">Ubuntu X64</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armhf</b></div>
+                                            <div><b class="instructionListHeader">Ubuntu Armhf</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">X64 - BETA</b></div>
+                                            <div><b class="instructionListHeader">Ubuntu X64 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armhf - BETA</b></div>
+                                            <div><b class="instructionListHeader">Ubuntu Armhf - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
@@ -596,28 +597,28 @@
 
                                         <div class="installPlatform hide debian">
 
-                                            <div><b class="instructionListHeader">X64</b></div>
+                                            <div><b class="instructionListHeader">Debian X64</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armhf</b></div>
+                                            <div><b class="instructionListHeader">Debian Armhf</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">X64 - BETA</b></div>
+                                            <div><b class="instructionListHeader">Debian X64 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armhf - BETA</b></div>
+                                            <div><b class="instructionListHeader">Debian Armhf - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
@@ -628,28 +629,28 @@
 
                                         <div class="installPlatform hide linuxmint">
 
-                                            <div><b class="instructionListHeader">X64</b></div>
+                                            <div><b class="instructionListHeader">Linux Mint X64</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armhf</b></div>
+                                            <div><b class="instructionListHeader">Linux Mint Armhf</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">X64 - BETA</b></div>
+                                            <div><b class="instructionListHeader">Linux Mint X64 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_amd64.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_amd64.deb">dpkg -i {filename}</code></li>
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">Armhf - BETA</b></div>
+                                            <div><b class="instructionListHeader">Linux Mint Armhf - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/emby-server-rpm_3.2.50.0_x86_64.rpm">{filename}</a></li>
                                                 <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-deb_{version}_armhf.deb">dpkg -i {filename}</code></li>
