--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -450,16 +450,9 @@
                                 <div class="wpb_wrapper">
 
                                     <div>
-                                        <div style="vertical-align: middle;display:flex;align-items:center;">
-                                            <h2 style="margin: 0;">Installation</h2>
-                                            <div style="margin-left: 2em;font-size: 84%;">
-                                                <span class="wpb_button align_left"><a style="font-size:inherit;padding: .5em 1em!important;" href="https://emby.media/community" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
-                                                <span class="wpb_button align_left"><a style="font-size:inherit;padding: .5em 1em!important;" href="https://github.com/MediaBrowser/Wiki/wiki" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-book"></i><span>Wiki</span><span class="ripple-container"></span></a></span>
-                                            </div>
-                                        </div>
-                                        <div style="margin:1em 0;">
+                                        <div style="margin:0 0 1em;">
                                             <label>
-                                                <div>Select platform:</div>
+                                                <h3 style="margin:0;">Platform:</h3>
                                                 <select onchange="onPlatformChange(this.value);" style="height:auto;">
                                                     <option value="asustor">Asustor</option>
                                                     <option value="freenas">FreeNAS</option>
