--- a/src/download.html
+++ b/src/download.html
@@ -788,7 +788,7 @@
                                                 <div class="w-portfolio-item-image"><img width="336" height="336" src="resources/kodi.png" class="w-portfolio-item-image-first wp-post-image" alt="kodi">	</div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
-                                                        <h2 class="w-portfolio-item-title">Emby for Kodi</h2>
+                                                        <h2 class="w-portfolio-item-title">Emby Add-ons for Kodi</h2>
                                                         <span class="w-portfolio-item-arrow"></span>
                                                         <span class="w-portfolio-item-text"></span>
                                                     </div>
