--- a/src/emby-for-kodi.html
+++ b/src/emby-for-kodi.html
@@ -411,7 +411,7 @@
             <div class="l-submain for_pagehead color_alternate size_large" style="padding-top: 140px;">
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
-                        <h1>Emby for Kodi</h1>
+                        <h1>Emby Add-ons for Kodi</h1>
                         <div class="w-pagehead-nav">
                             <div class="w-pagehead-nav-h">
                                 <a class="w-pagehead-nav-item type_prev" href="mac-server.html" title="Emby Server for Mac"><i class="mdfi_navigation_chevron_left"></i></a>
@@ -430,7 +430,7 @@
 
                                     <h2>Install the EmbyCon Add-on</h2>
                                     <p>Just install the EmbyCon Add-on from the Offical Kodi Add-On Repository and you can connect directly to your Emby Server. EmbyCon lets you easily browse and play your Emby library using Kodi.</p>
-                                    <p>For more information, including a YouTube demonstration, visit the <a href="https://emby.media/community/index.php?/topic/46651-embycon-kodi-addon" target="_blank">Emby community.</a></p>
+                                    <p>For more information, including a YouTube demonstration, visit the <a href="https://emby.media/community/index.php?/topic/57016-embycon-kodi-addon" target="_blank">Emby community.</a></p>
                                     <h2>Or Use the Emby for Kodi Sync Add-On</h2>
                                     <p>The Emby for Kodi sync add-on has a richer feature set than EmbyCon, but requires a periodic syncing process to download data from your Emby Server. This syncing process can take a little while and may result in increased CPU and memory consumption on your Emby Server.</p>
                                     <p>Installation instructions can be found on our <a target="_blank" href="https://github.com/MediaBrowser/plugin.video.emby/wiki/Emby-Repository">Emby for Kodi wiki.</a></p>
