Update terms for clarity

--- a/src/premiereterms.html
+++ b/src/premiereterms.html
@@ -409,9 +409,9 @@
             <div class="l-submain wpb_row">
                 <div class="l-submain-h g-html i-cf">
 
-                    <h3>Updated: January 9, 2017</h3>
+                    <h3>Updated: May 16, 2018</h3>
 
-                    <p>In addition to the Terms of Service and Privacy Policy indicated on the Website, Emby Premier Subscriptions are governed by the following terms:</p>
+                    <p>In addition to the Terms of Service and Privacy Policy indicated on the Website, Emby Premiere Subscriptions are governed by the following terms:</p>
 
                     <p>Subscriptions: Emby offers a subscription which provides access to certain features and services for the term of the subscription ("Subscription"). </p>
 
@@ -424,13 +424,13 @@
                     <p>Monthly Term: Monthly shall mean a recurring monthly period, which term shall end on the immediately preceding date of the next calendar month after to the date enrolled.  The term, if selected, shall automatically renew on the same calendar date of the following calendar month (for example purposes only, if enrolled on April 1 of a given year, the term shall expire on April 30 of the given month and automatically renew on May 1 of the given year).</p>
 
                     <p>
-                        Premier Devices:
-                        Emby Premier shall allow for a certain amount of concurrent devices per subscription for access to Premier only features and apps. Unless otherwise indicated on the website, Emby Premier shall be limited to 15 Devices at any given time.
+                        Premiere Devices:
+                        Emby Premier shall allow for a certain amount of total devices per subscription for access to Premier only features and apps. Unless otherwise indicated on the website, Emby Premiere shall be limited to 15 Devices per Premiere key.
                     </p>
 
-                    <p>A "Premier Device" is defined as any mobile, computer, or other electronic device which registers with the Emby server with a unique "device id".  The device id is a uniquely generated id that is dependent on both device model, OS version, and application.  Each unique device id shall be counted as a separate Device.  It is possible that a single machine (whether mobile, desktop computer, or otherwise) with multiple applications installed on the machine may register as a new device id per application.  In this event, each unique device id will be counted as separate devices.</p>
+                    <p>A "Premiere Device" is defined as any mobile, computer, or other electronic device which registers with the Emby server with a unique "device id".  The device id is a uniquely generated id that is dependent on both device model, OS version, and application.  Each unique device id shall be counted as a separate Device.  It is possible that a single machine (whether mobile, desktop computer, or otherwise) with multiple applications installed on the machine may register as a new device id per application.  In this event, each unique device id will be counted as separate devices.</p>
 
-                    <p>The Premier Device shall be granted access to Premier applications and services for the Subscription Term.  The system will automatically manage the devices as being granted Premier Device access throughout the Subscription term on a rolling date-of-access basis.  The term for this rolling period is to be determined by the system and may change from time to time without notice.  Any devices in excess of the permitted number or upon expiration of the given Subscription Term may no longer have access to any Premier functionality, apps, or services.</p>
+                    <p>The Premiere Device shall be granted access to Premiere applications and services for the Subscription Term.  The system will automatically manage the devices as being granted Premiere Device access throughout the Subscription term on a rolling date-of-access basis.  The term for this rolling period is to be determined by the system and may change from time to time without notice.  Any devices in excess of the permitted number or upon expiration of the given Subscription Term may no longer have access to any Premiere functionality, apps, or services.</p>
 
                     <p>Refunds: Any and all fees related to Emby Subscriptions are non-refundable.  However, Emby may in its’ sole discretion, provided refunds on a case by case basis.</p>
 
