--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -538,7 +538,7 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">QNAP ARM</b></div>
+                                            <div><b class="instructionListHeader">QNAP ARM / X86</b></div>
                                             <div>Install Emby Server for QNAP by downloading from the <a target="_blank" href="https://forum.qnap.com/viewtopic.php?f=320&t=109476">QNAP Community.</a>.</div>
                                             <div>
                                                 <strong>Run Setup Wizard</strong>
