--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -462,6 +462,7 @@
                                                     <option value="synology" selected>Synology</option>
                                                     <option value="terramaster">TerraMaster</option>
                                                     <option value="thecus">Thecus</option>
+                                                    <option value="westerndigital">Western Digital</option>
                                                 </select>
                                             </label>
                                         </div>
@@ -683,6 +684,41 @@ After Emby is installed, need to be started and then can be accessed on the webp
                                             <img src="resources/thecuslegacy4.png" />
                                             <img src="resources/thecus4.png" />
 
+                                        </div>
+
+                                        <div class="installPlatform hide westerndigital">
+
+                                            <div><b class="instructionListHeader">WD dl2100 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_dl2100_{version}_x86_64.bin" href="emby-server-western_digital_dl2100_{version}_x86_64.bin">{filename}</a></li>
+                                                <li>Install Emby Server using the Western Digital Web interface.</li>
+                                                <li>Start Emby Server using the Western Digital Web interface.</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">WD dl4100 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_dl4100_{version}_x86_64.bin" href="emby-server-western_digital_dl4100_{version}_x86_64.bin">{filename}</a></li>
+                                                <li>Install Emby Server using the Western Digital Web interface.</li>
+                                                <li>Start Emby Server using the Western Digital Web interface.</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">WD pr2100 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_pr2100_{version}_x86_64.bin" href="emby-server-western_digital_pr2100_{version}_x86_64.bin">{filename}</a></li>
+                                                <li>Install Emby Server using the Western Digital Web interface.</li>
+                                                <li>Start Emby Server using the Western Digital Web interface.</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">WD pr4100 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-western_digital_pr4100_{version}_x86_64.bin" href="emby-server-western_digital_pr4100_{version}_x86_64.bin">{filename}</a></li>
+                                                <li>Install Emby Server using the Western Digital Web interface.</li>
+                                                <li>Start Emby Server using the Western Digital Web interface.</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
                                         </div>
                                     </div>
                                 </div>
